# round-based-protocol

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: audit.yml  publish.yml  readme.yml  rust.yml
delivery/core/: Cargo.toml
delivery/core/src/: lib.rs
delivery/core/src/round_store/: mod.rs  store.rs
delivery/core/src/serialization_backend/: bincode.rs  mod.rs
delivery/core/src/utils/: mock_tls.rs  mod.rs
delivery/core/tests/: self_signed_certificates_work_with_rustls.rs
delivery/trusted-delivery/: Cargo.toml
delivery/trusted-delivery/client/: Cargo.toml
delivery/trusted-delivery/client/src/: client.rs  draft.rs  lib.rs  main.rs  sorted_list.rs
delivery/trusted-delivery/client/tests/: server_client.rs
delivery/trusted-delivery/core/: Cargo.toml
delivery/trusted-delivery/core/src/: challenge.rs  generic_array_ext.rs  lib.rs  publish_msg.rs
delivery/trusted-delivery/core/src/auth/: challenge.rs  mod.rs  server_key.rs
delivery/trusted-delivery/core/src/crypto/: mod.rs  serde.rs
delivery/trusted-delivery/core/src/crypto/default_suite/: dalek_dh.rs  dalek_signing.rs  mod.rs
delivery/trusted-delivery/core/src/messages/: auth.rs  mod.rs  publish_msg.rs  receive_data.rs  send_fixed.rs
delivery/trusted-delivery/server/: Cargo.toml
delivery/trusted-delivery/server/src/: db.rs  dev.rs  lib.rs  main.rs
delivery/trusted-delivery/server/src/routes/: auth.rs  mod.rs  send.rs  subscribe.rs
delivery/trusted-delivery/server/src/server/: challenge.rs  mod.rs
delivery/trusted-delivery/src/: generic_array_ext.rs  lib.rs
delivery/trusted-delivery/src/crypto/: mod.rs
delivery/trusted-delivery/src/crypto/default_suite/: aead.rs  elliptic.rs  kdf.rs
delivery/trusted-delivery/src/messages/: forward_msg.rs  hello_msg.rs  publish_msg.rs  receive_fixed.rs
delivery/trusted-delivery/src/server/: acceptor.rs  mod.rs
delivery/two-party/: Cargo.toml
delivery/two-party/src/: core.rs  lib.rs  tcp.rs  tls.rs
delivery/utils/: Cargo.toml
delivery/utils/src/: lib.rs
delivery/utils/src/serialization_backend/: serde_json.rs
examples/random-generation-protocol/: Cargo.toml
examples/random-generation-protocol/src/: lib.rs
examples/two-party-random-generation/: Cargo.toml
examples/two-party-random-generation/src/: client.rs  server.rs
round-based/: Cargo.toml  README.md
round-based-derive/: Cargo.toml
round-based-derive/src/: lib.rs
round-based-ing/: Cargo.toml
round-based-ing/data/: dev_zkp_setup.json
round-based-ing/src/: debugging.rs  generic.rs  lib.rs
round-based-ing/src/errors/: mod.rs
round-based-ing/tests/: pregenerate_keygen_setup.rs  t_ecdsa.rs
round-based-tests/: Cargo.toml
round-based-tests/tests/: generate_randomness.rs  generate_randomness_between_two_parties_over_tcp.rs  generate_randomness_between_two_parties_over_tls_tcp.rs  generate_randomness_over_tcp.rs  rounds.rs
round-based/examples/: mpc_random_generation.rs
round-based/src/: _docs.rs  blocking.rs  delivery.rs  lib.rs  party.rs  rounds.rs  runtime.rs  simulation.rs
round-based/src/blocking/: mod.rs  tokio_spawn_blocking.rs
round-based/src/delivery/: mod.rs  two_party.rs
round-based/src/delivery/trusted_delivery/: client.rs  generic_array_ext.rs  message.rs  mod.rs  server.rs  tls_handshake.rs
round-based/src/delivery/trusted_delivery/client/: identity_resolver.rs  insecure.rs
round-based/src/delivery/trusted_delivery/client/insecure/: acceptor.rs  connector.rs  crypto.rs  incoming.rs  outgoing.rs  p2p_handshake.rs  test_utils.rs
round-based/src/delivery/trusted_delivery/client/insecure/crypto/: aead.rs  mod.rs
round-based/src/delivery/trusted_delivery/client/insecure/crypto/default_suite/: aead.rs  elliptic.rs  kdf.rs  mod.rs
round-based/src/delivery/trusted_delivery/client/insecure/p2p_handshake/: ephemeral.rs
round-based/src/delivery/trusted_delivery/messages/: forward_msg.rs  hello_msg.rs  mod.rs  publish_msg.rs  receive_data.rs  receive_fixed.rs  send_fixed.rs
round-based/src/delivery/trusted_delivery/server/: acceptor.rs
round-based/src/delivery/two_party/: insecure.rs  mod.rs  tls.rs
round-based/src/delivery/utils/: mod.rs  tls.rs
round-based/src/rounds/: mod.rs  process_incoming.rs  round_input.rs  rounds.rs  simple_store.rs  store.rs
round-based/src/rounds_router/: mod.rs  simple_store.rs  store.rs
round-based/tests/: derive.rs
round-based/tests/derive/compile-fail/: wrong_usage.rs  wrong_usage.stderr
round-based/tests/derive/compile-pass/: correct_usage.rs
src/: lib.rs  sm.rs
src/async_runtime/: mod.rs  watcher.rs
src/containers/: broadcast.rs  mod.rs  p2p.rs  push.rs  store_err.rs  traits.rs
src/dev/: async_simulation.rs  mod.rs  simulation.rs
src/dev/simulation/: benchmark.rs
tests/: simulate_silly_protocol.rs
tests/silly_protocol/: mod.rs  rounds.rs
