[package]
name = "round-based-ing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
thiserror = "1"
tracing = { version = "0.1", optional = true }

round-based = { path = "../round-based" }
ecdsa-mpc = { git = "https://github.com/ing-bank/threshold-signatures" }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
curv-kzen = "0.2"
serde_json = "1"
lazy_static = "1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
test-case = "1.2"

[features]
default = []
debugging = ["tracing"]

[[test]]
name = "t_ecdsa"
required-features = ["debugging"]
