[package]
name = "round-based-ing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"]}

round-based = { path = "../round-based" }
ecdsa-mpc = { git = "https://github.com/ing-bank/threshold-signatures" }
curv-kzen = "0.2"
secp256k1 = "0.15"
sorted-vec = "0.7"
digest = "0.9"
drain_filter_polyfill = "0.1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
lazy_static = "1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
test-case = "2"
sha2 = "0.9"

[[test]]
name = "t_ecdsa"
required-features = ["dangerous-capabilities"]

[features]
default = []
dangerous-capabilities = []
