[package]
name = "round-based-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt", "macros"] }
anyhow = "1"
rand = "0.8"

round-based = { path = "../round-based", features = ["two-party-insecure"] }
random-generation-protocol = { path = "../examples/random-generation-protocol" }