[package]
name = "round-based-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt", "macros"] }
tokio-rustls = "0.23"
rustls = "0.20"
anyhow = "1"
rand = "0.8"
sha2 = "0.9"
hex-literal = "0.3"
hex = "*"
futures = "0.3"
rand_chacha = "0.3"
matches = "0.1"
thiserror = "1"
url = "2.2"

round-based = { path = "../round-based", features = ["mock-tls"] }
random-generation-protocol = { path = "../examples/random-generation-protocol" }
