[package]
name = "round-based"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
description = "Driver for MPC protocols"
repository = "https://github.com/ZenGo-X/round-based-protocol"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
phantom-type = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "1"
never = "0.1"

round-based-derive = { path = "../round-based-derive", optional = true }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.9"
hex = "*"
trybuild = "1"
rcgen = "0.8"
test-case = { version = "1", features = ["hamcrest_assertions"] }
hamcrest2 = "0.3"
proptest = "1"
matches = "0.1"

[features]
default = []
derive = ["round-based-derive"]

[[test]]
name = "derive"
required-features = ["derive"]
