[package]
name = "round-based"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Driver for MPC protocols"
repository = "https://github.com/ZenGo-X/round-based-protocol"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
phantom-type = "0.3"
tracing = "0.1"
thiserror = "1"

round-based-derive = { version = "0.2", optional = true }

tokio = { version = "1", features = ["rt"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
trybuild = "1"
matches = "0.1"
futures = { version = "0.3", default-features = false }

[features]
default = []
dev = ["tokio/sync", "tokio-stream"]
derive = ["round-based-derive"]
runtime-tokio = ["tokio"]
serde = ["dep:serde"]

[[test]]
name = "derive"
required-features = ["derive"]
