[package]
name = "delivery-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = "1"

bincode = { version = "1.3", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["bincode"]