[package]
name = "delivery-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = "1"
thiserror = "1"

bincode = { version = "1.3", optional = true }
serde_json = { version = "1", optional = true }
rcgen = { version = "0.8", optional = true }
rustls = { version = "0.20", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
rustls = { version = "0.20", default-features = false }
rcgen = "0.8"
tokio-rustls = "0.23"
futures = "0.3"
matches = "0.1"
round-based-derive = { path = "../../round-based-derive" }

[features]
default = ["bincode"]
mock-tls = ["rustls", "rcgen"]

[[test]]
name = "self_signed_certificates_work_with_rustls"
required-features = ["mock-tls"]