[package]
name = "trusted-delivery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

never = "0.1"
aes-gcm = "0.9"
rand = "0.8"
serde_bytes = "0.11"
aead = "0.4"
hex = { version = "0.4", default-features = false }
phantom-type = "0.3"
serde = "1"
thiserror = "1"

generic-array = "0.14"
typenum = "=1.13"

sha2 = "0.9"
digest = "0.9"
hkdf = "0.11"

secp256k1 = { version = "0.20", features = ["global-context"] }

[dev-dependencies]
test-case = { version = "1", features = ["hamcrest_assertions"] }
hamcrest2 = "0.3"
proptest = "1"

tokio = { version = "1", features = ["rt", "macros", "io-util"] }
tokio-util = { version = "0.6", features = ["compat"] }