[package]
name = "two-party-delivery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
phantom-type = "0.3"
thiserror = "1"

tokio = { version = "1.15", features = ["net"], optional = true }
tokio-util = { version = "0.6", features = ["compat"], optional = true }

delivery-core = { path = "../core" }
delivery-utils = { path = "../utils" }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
futures-test = "0.3"
matches = "0.1"

[features]
default = []
insecure = ["tokio", "tokio-util"]