[package]
name = "random-generation-protocol"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
round-based = { path = "../../round-based", features = ["derive"]  }

tokio = { version = "1.15", features = ["rt"] }
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
generic-array = { version = "0.14", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
round-based = { path = "../../round-based", features = ["derive", "dev"]  }
tokio = { version = "1.15", features = ["macros", "rt"] }
hex = "0.4"
rand_chacha = "0.3"
