[package]
name = "two-party-random-generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
round-based = { path = "../../round-based", features = ["two-party-insecure"] }
random-generation-protocol = { path = "../random-generation-protocol" }
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt"] }

structopt = "0.3"
anyhow = "1"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
