[package]
name = "trusted-delivery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
url = "2.2"
hex = "0.4"
bincode = "1"

thiserror = "1"
educe = "0.4"

digest = "0.9"
generic-array = "0.14"
typenum = "=1.13"

delivery-core = { path = "../../core" }
trusted-delivery-core = { path = "../core", features = ["default-crypto-suite"] }

serde = { version = "1", features = ["derive"] }
serde_with = "1.12"

[dev-dependencies]
trusted-delivery-server = { path = "../server", features = ["dev"] }
