[package]
name = "trusted-delivery-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.9"
generic-array = "0.14"
typenum = "=1.13"

phantom-type = "0.3"
never = "0.1"

thiserror = "1"
educe = "0.4"

# Default crypto suite
hkdf = { version = "0.11", optional = true }
sha2 = { version = "0.9", optional = true }
aes-gcm = { version = "0.9", optional = true }
aead = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
secp256k1 = { version = "0.20", features = ["global-context"], optional = true }

[features]
default = ["default-crypto-suite"]
default-crypto-suite = ["hkdf", "sha2", "aes-gcm", "secp256k1", "aead"]