[package]
name = "trusted-delivery-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.9"
generic-array = "0.14"
typenum = "=1.13"
rand = "0.8"
crypto-mac = "0.11"

serde = { version = "1", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
phantom-type = "0.3"
never = "0.1"

thiserror = "1"
educe = "0.4"

# Default crypto suite
hkdf = { version = "0.11", optional = true }
sha2 = { version = "0.9", optional = true }
aes-gcm = { version = "0.9", optional = true }
aead = { version = "0.4", optional = true }
hmac = { version = "0.11", optional = true }
x25519-dalek = { version = "1.2", optional = true }
ed25519-dalek = { version = "1", optional = true }
rand-v7 = { package = "rand", version = "0.7.3", optional = true }

[features]
default = ["default-crypto-suite"]
default-crypto-suite = ["hkdf", "hmac", "sha2", "aes-gcm", "aead", "x25519-dalek", "ed25519-dalek", "rand-v7"]