[package]
name = "trusted-delivery-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trusted-delivery-core = { path = "../core" }

tokio = { version = "1", features = ["sync"] }

thiserror = "1"

[dev-dependencies]
matches = "0.1"