[package]
name = "trusted-delivery-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trusted-delivery-core = { path = "../core" }

tokio = { version = "1", features = ["sync", "time"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "tls"] }

generic-array = "0.14"
hex = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
digest = "0.9"

thiserror = "1"
educe = "0.4"

# dev feature
url = { version = "2.2", optional = true }

[dev-dependencies]
matches = "0.1"

[features]
default = []
dev = ["url"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
